Accessibility/keyboard tabbing: prevent tabbing into slides not visible on screen, pause animation when tab into slider

--- a/flexslider.css
+++ b/flexslider.css
@@ -37,7 +37,8 @@
 /* FlexSlider Necessary Styles
 *********************************/
 .flexslider {margin: 0; padding: 0;}
-.flexslider .slides > li {display: none; -webkit-backface-visibility: hidden;} /* Hide the slides before the JS is loaded. Avoids image jumping */
+.flexslider .slides > li {display: none; -webkit-backface-visibility: hidden; visibility: hidden;} /* Hide the slides before the JS is loaded. Avoids image jumping */
+.flexslider .slides > .flex-active-slide, .flexslider-animating .slides > .flex-active-slide { visibility: visible; } /* only show the slides when animating on is active */
 .flexslider .slides img {width: 100%; display: block;}
 .flex-pauseplay span {text-transform: capitalize;}
 
